--- a/scss/os/_overrides_tuieditor.scss
+++ b/scss/os/_overrides_tuieditor.scss
@@ -495,3 +495,8 @@
     }
   }
 }
+
+.ui-datepicker {
+  z-index: $u-zindex-base !important;
+}
+
